add images and create slider state

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ nav.dark .toggler--slider {
 /* MAIN styles */
 main {
   padding: 57px 27px;
-  background-image: url("./images/react-icon-light.png");
+  background-image: url("./assets/react-icon-light.png");
   background-repeat: no-repeat;
   background-position: right center;
   flex: 1 1 auto;
@@ -124,7 +124,7 @@ main {
 }
 
 main.dark {
-  background-image: url("./images/react-icon-dark.png");
+  background-image: url("./assets/react-icon-dark.png");
   background-color: #282d35;
   color: white;
 }
